# mcp-go

./: .gitignore  LICENSE  Makefile  PROJECT_STATUS.md  README.md  client.go  go.mod  interface.go  pyproject.toml  schema.go  server.go  types.go
docs/: README.md  api-reference.md  architecture.md  transport-guide.md
examples/: README.md
examples/grpc/: README.md
examples/grpc/clients/go/: main.go
examples/grpc/server/: main.go
examples/middleware/: README.md
examples/middleware/client/: main.go
examples/middleware/server/: main.go
examples/sse/: README.md
examples/sse/clients/go/: main.go
examples/sse/clients/python/: main.py
examples/sse/server/: main.go
examples/stdio/: README.md
examples/stdio/clients/go/: main.go
examples/stdio/clients/python/: main.py
examples/stdio/server/: main.go
examples/streamable_http/: README.md
examples/streamable_http/clients/go/: main.go
examples/streamable_http/server/: main.go
examples/streamable_http_server/: main.go
protocol/: interface.go  protocol.go  protocol_test.go
pydantic_tests/: README.md  test_agent.py  test_streamable_http.py
test/: client_test.go  schema_test.go  server_test.go
transport/: interface.go  mock.go
transport/grpc/: client.go  interface.go  jsonrpc.proto  server.go
transport/grpc/protogen/: jsonrpc.pb.go  jsonrpc_grpc.pb.go
transport/sse/: client.go  interface.go  server.go
transport/stdio/: client.go  interface.go  server.go
transport/streamable/: client.go  interface.go  server.go
types/: mcp.go  messages.go  transport.go
(+2 files in other folders)
